--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 *.json
 /__pycache__
 /modules/__pycache__
+/tests/__pycache__
+/tests/__init__.py
 *.pyc
 implementation_plan.md
 MODULE_IMPLEMENTATION_PLAN.md
